# python-club

./: .gitignore  LICENSE  README.md  requirements-dev.txt  requirements.txt
events/: create_invitation.py  invitation_template.txt
future_sessions/project_structuring/: AUTHOR
future_sessions/project_structuring/version 1/: INSTALL.md  game.py  requirements.txt
session_1/: 01_assigment_operator.py  02_error_messages.py  03_iterable_parsing.py  04_pattern_matching.py  05_f-strings.py  06_string_methods.py  07_dict_comprehension.py  08_random_garbage.py  09_better_type_hinting.py  10_dictionary_union.py  11_type_union_operator.py  12_async_programming.py  AUTHOR  README.md
session_2/: 01_hello.py  01_hello.qml  AUTHOR  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
session_2/qtcalculator/: __init__.py  __main__.py  application_window.py  calc.py  main_engine.py
session_2/qtcalculator/views/: main.qml
session_2/qtcalculator/views/components/: Display.qml  MyButton.qml  NumberPad.qml
session_3/: .python-version  Makefile  README.md  pyproject.toml  requirements-extras.txt  requirements.txt  setup.cfg  tox.ini
session_3/.github/workflows/: tests.yml
session_3/epps/: __init__.py  cli.py  weather.py
session_3/tests/: test_cli.py  test_weather.py
