[metadata]
name = qtcalculator
version  = 0.0.2
description = Calculator in Qt
author = Juuso Korhonen
license = MIT
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
packages = find:
install_requires =
    PySide6 >=6.2
python_requires = >=3.9
include_package_data = True

[options.packages.find]
include = qtcalculator

[options.entry_points]
console_scripts =
    qtcalc = qtcalculator:calc
