[metadata]
name = epps
description = Example Python Package Stub
version = 0.0.1
author = Juuso Korhonen
license = MIT
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
packages = find:
install_requires =
    requests >=2.27
    eccodes >=1.4
    cfgrib >=0.9
    numpy >=1.21
    fmiopendata >=0.3
python_requires = >=3.7
include_package_data = False
scripts = 
    bin/get_weather.py

[options.extras_require]
tests = 
    flake8 >=4.0
    mypy >=0.9
    pycodestyle >=2.8
    pytest >=7.0
    pytest-cov >=3.0
    pytest-pycodestyle >=2.2
    tox >=3.24
    pylint >=2.12
extras = 
    pillow>=9.0
    scipy>=1.7
    pandas>=1.3
    matplotlib>=3.5
    seaborn>=0.11

[options.entry_points]
console_scripts = 
    epps-cli = epps.cli:cli

[flake8]
max-line-length = 142
